--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Kev CB.</a>.
+      >. Coded by
+      <a
+        href="https://www.frontendmentor.io/profile/kevcb1988/solutions"
+        target="_blank"
+        >Kev CB.</a
+      >.
     </footer>
 
     <script src="./js/main.js"></script>
